# geo-cloud-demo

./: .gitignore  README.md  geo-cloud-demo.sln
.github/workflows/: ci.yml  deploy.yml
api/: .dockerignore  Dockerfile  GeoCloudApi.csproj  Program.cs  appsettings.Development.json  appsettings.json
docs/: Architecture.md
geo-spark-ml/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_job.py
geo-spark-ml/.github/workflows/: ci.yml
geo-spark-ml/configs/: cloud_example.yaml  local.yaml
geo-spark-ml/data/: points_sample.csv
geo-spark-ml/src/geo_clustering/: clustering.py  config.py  features.py  main.py
